Fixing font spacing in body text.

--- a/www/themes/borg/css/base.css
+++ b/www/themes/borg/css/base.css
@@ -12,7 +12,6 @@ html {
 body {
   font-family: 'Source Sans Pro', "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 16px;
-  letter-spacing: 0.01em;
 }
 
 p {
@@ -38,12 +37,14 @@ img {
 h1 {
   font-weight: 300 /* Light */;
   font-size: 60px;
+  letter-spacing: 0.01em;
 }
 
 h2 {
   margin: 1em 0;
   font-weight: 300; /* Light */
   font-size: 38px;
+  letter-spacing: 0.01em;
 }
 
 @media (min-width: 520px) {
@@ -56,6 +57,7 @@ h3 {
   margin: 1.5em 0 1em;
   font-weight: 400; /* Normal */
   font-size: 24px;
+  letter-spacing: 0.01em;
 }
 
 h4 {
